# energy-api

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml  run_api.py
app/: main.py
app/routers/: __init__.py  battery.py
app/schemas/: __init__.py  battery.py
dev/: check.py  mock.py  models.py  optimize.py  run.py  run_api.py  run_api2.py  run_standalone.ipynb  streamlit_app.py
dev/archive/: mock.py
dev/archive/20250913/: models.py  run_standalone.ipynb
dev/archive/20250913/cache/: optimization_result.parquet
dev/cache/: battery_setup.json  df_energy.parquet  df_result.parquet
