[project]
name = "energy-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pulp>=3.2.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.24",
]
